# fastapi-url-shortener

./: .gitignore  Dockerfile  README.md  env.sample  pyproject.toml
.github/workflows/: build-demo.yml
shortener_app/: config.py  crud.py  keygen.py  main.py
