[tool.poetry]
name = "shortener-app"
version = "0.1.0"
description = ""
authors = ["Matt O'Donnell <matt.odonnell@greenpages.com>"]
readme = "README.md"
packages = [{include = "shortener_app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
sqlmodel = "^0.0.8"
python-dotenv = "^0.21.0"
validators = "^0.20.0"
SQLAlchemy = "^1.4.41"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
